# AutoCar

./: .gitignore  Dockerfile  README.md  accuracy_report.txt  eval_accuracy.py  export_yolo_onnx.py  finetune_lowlight.py  infer.py  night_scene_eval_plan.md  night_scene_report.txt  profile_model.py  profile_report.txt  quantization_report.txt  quantize.py
my_project/: hello.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/cpp_pub/share/cpp_pub/: package.dsv  package.ps1  package.sh
ros2_ws/install/py_sub/lib/py_sub/: subscriber
ros2_ws/install/py_sub/share/py_sub/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/sensor_processor/share/sensor_processor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/cpp_pub/: CMakeLists.txt
ros2_ws/src/cpp_pub/src/: publisher.cpp
ros2_ws/src/py_sub/: package.xml  setup.py
ros2_ws/src/sensor_processor/: CMakeLists.txt
ros2_ws/src/sensor_processor/include/sensor_processor/: thread_pool.hpp
ros2_ws/src/sensor_processor/src/: image_processor_node.cpp
train/: CMakeLists.txt  main  main.cpp  move_demo  move_demo.cpp  sensor_demo  sensor_demo.cpp  threadpool  threadpool.cpp
week1/: CMakeLists.txt  log_analyzer.py  sensor.cpp
week2/: CMakeLists.txt  README.md
week2/include/: sensor.hpp
week2/src/: sensor_mt.cpp  sensor_mt_opt.cpp
yolo-cpu-demo/: Dockerfile  README.md  build_hard_dataset.py  error_report.txt  eval_night_scene.py  finetune_lowlight_v2.py  preprocess.py  rosbag_to_hdf5.py  run.sh
(+1 files in other folders)
